[gd_scene load_steps=2 format=3 uid="uid://b8dim4mv2v5k6"]

[ext_resource type="Script" uid="uid://u3axrp7jsh18" path="res://Scripts/pause.gd" id="1_o80xk"]

[node name="PAUSE" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_o80xk")

[node name="Paused_Menu" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1251.0
offset_bottom = 931.0
scale = Vector2(0.639653, 0.644238)
color = Color(0, 0, 0, 0.635294)

[node name="Paused_Menu_Exit" type="Button" parent="Paused_Menu"]
unique_name_in_owner = true
layout_mode = 2
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.7858
offset_right = 0.214233
offset_bottom = 57.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 35
text = "X"

[node name="Paused_Menu_Buttons" type="VBoxContainer" parent="Paused_Menu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.776
offset_top = -139.534
offset_right = 107.224
offset_bottom = 100.466
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.35848, 1.35848)

[node name="Options" type="Button" parent="Paused_Menu/Paused_Menu_Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Options
"

[node name="About" type="Button" parent="Paused_Menu/Paused_Menu_Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "About"

[node name="Exit_to_Main_Menu" type="Button" parent="Paused_Menu/Paused_Menu_Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Exit To Main Menu"

[node name="Exit_Game" type="Button" parent="Paused_Menu/Paused_Menu_Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Exit Game
"

[node name="Options_Menu" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 800.0
offset_bottom = 600.0
color = Color(0, 0, 0, 0.635294)

[node name="Options_Exit" type="Button" parent="Options_Menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -31.0
offset_right = 14.0
offset_bottom = 57.0
grow_horizontal = 0
scale = Vector2(0.681633, 0.681633)
theme_override_font_sizes/font_size = 35
text = "X"

[node name="About_Menu" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 800.0
offset_bottom = 600.0
color = Color(0, 0, 0, 0.635294)

[node name="About_Exit" type="Button" parent="About_Menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -31.0
offset_right = 19.0
offset_bottom = 57.0
grow_horizontal = 0
scale = Vector2(0.624156, 0.624156)
theme_override_font_sizes/font_size = 35
text = "X"

[connection signal="pressed" from="Paused_Menu/Paused_Menu_Exit" to="." method="_on_paused_menu_exit_pressed"]
[connection signal="pressed" from="Paused_Menu/Paused_Menu_Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Paused_Menu/Paused_Menu_Buttons/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="Paused_Menu/Paused_Menu_Buttons/Exit_to_Main_Menu" to="." method="_on_exit_to_main_menu_pressed"]
[connection signal="pressed" from="Paused_Menu/Paused_Menu_Buttons/Exit_Game" to="." method="_on_exit_game_pressed"]
[connection signal="pressed" from="Options_Menu/Options_Exit" to="." method="_on_options_exit_pressed"]
[connection signal="pressed" from="About_Menu/About_Exit" to="." method="_on_about_exit_pressed"]
